--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.14.1",
-    "sort-by": "^1.2.0",
     "react-scripts": "5.0.1",
-     "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-loader-spinner": "^6.0.0-0"
-
-
-
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
